--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.17",
+    "axios": "^1.4.0",
     "firebase": "^9.23.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
